--- a/SMA/app1/templates/index.html
+++ b/SMA/app1/templates/index.html
@@ -15,7 +15,7 @@
     
     <body>
 
-        <!-- page preloader -->
+        <!-- page preloader for loading -->
         <!-- <div id="loading-area">
             <div class="loader-col">
                 <div class="loader" id="loader"></div>
@@ -37,6 +37,7 @@
                                 alt="profileImg" />
                             <a href="#">
                                 <h5>Stock Market Analyzer</h5>
+                                <h6>Welcome to the Website</h6>
                             </a>
                         </a>
                     </div>
