--- a/SMA/app1/templates/index.html
+++ b/SMA/app1/templates/index.html
@@ -24,6 +24,7 @@
         <!-- end loading -->
     
         <!-- slider -->
+        
         <div class="dashboard-wrap">
             <!-----:::::::::::::::::::::side bar left::::::::::::::::::::::::----->
             <!-- side bar left -->
@@ -49,7 +50,7 @@
                         <li class="menu-li">
                             <h3>
                                 <a href="#"><i class="fa-solid fa-chart-simple"></i> </a>
-                                <a href="{% url 'index' %}">
+                                <a href="{% url 'main' %}">
                                     <h4>Dashboard</h4>
                                 </a>
                             </h3>
@@ -261,7 +262,7 @@
                 </nav>
             </section>
         </div>
-    
+
         <script src="/SMA/static/JS/index.js"></script>
         <script src="/SMA/static/JS/index.js"></script>
     
