--- a/SMA/app1/templates/login.html
+++ b/SMA/app1/templates/login.html
@@ -22,7 +22,7 @@
  <section class="header-section">
    <div class="center-div">
      <h1 class="font-weight-bold">Welcome to Stock Market Analyzer</h1>
-     <p>Where Predictions Begin. Let's see how everything works! Everything is going pretty good I guess!</p>
+     <p>Where Predictions Begin.</p>
      
      <div class="header-buttons">
        <a class="nav-link" data-value="main-container" href="#">Login</a>
