--- a/SMA/app1/templates/profile.html
+++ b/SMA/app1/templates/profile.html
@@ -1,8 +1,10 @@
-{% extends 'index.html' %}
+{% extends 'main.html' %}
 
 {% block title %}Profile Page{% endblock %}
 
 {% block content %}
-
-
+    
+    <h1>Welcome</h1>
+    <p>This is the home page</p>
+    
 {% endblock %}
